# skval

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: format.sh
.claude/skills/share-audit/: SKILL.md
.claude/skills/share-audit/scripts/: check_meta.py
.claude/skills/ship/: SKILL.md
.github/workflows/: ci.yml  pages.yml
docs/: PROJECT_STATUS.md  USAGE.md  index.html
docs/examples/: commit-conventions-scorecard.md
docs/examples/commit-conventions/: README.md  SKILL.md
docs/examples/commit-conventions/evals/: evals.json
docs/examples/commit-conventions/workspace/: artifact_judgment.json  benchmark.json  scorecard.json  scorecard.md  triggering.json
docs/examples/skill-benchmark/: README.md  from-the-web.md  leaderboard.md  wild-skills.md
docs/examples/skill-benchmark/improved/: bad-skill.after.md  bad-skill.before.md  bad-skill.compare.json  docx.after.md  docx.change.md  web-daydream.after.json  (+19 more)
docs/plans/: 2026-06-18-skill-validator.md
docs/prd/: skill-validator-prd.md
docs/references/: skillsbench.md
docs/superpowers/specs/: 2026-06-22-cost-estimate-design.md
skills/skill-validator/: SKILL.md
skills/skill-validator/agents/: artifact-judge.md  comparator.md  eval-generator.md  executor.md  grader.md  triggering.md  user-simulator.md
skills/skill-validator/references/: schemas.md  scoring-rubric.md
skills/skill-validator/scripts/: aggregate.py  batch.py  benchmark_export.py  calibrate.py  classify.py  compare.py  conversation.py  cost_estimate.py  dimensions.py  eval_fixtures.py  history.py  jsonutil.py  pricing.py  resolve_skill.py  runs_io.py  safety_scan.py  scorecard.py  scoring.py  skval_cli.py  static_checks.py  stats.py  validate_full.py  validate_structural.py
tests/: test_aggregate.py  test_batch.py  test_benchmark_export.py  test_calibrate.py  test_classify.py  test_cli.py  test_compare.py  test_conversation.py  test_cost_estimate.py  test_dimensions.py  test_fixes.py  test_fixtures.py  test_history.py  test_jsonutil.py  test_precision.py  test_pricing.py  test_public_cli_surface.py  test_resolve_skill.py  test_safety_scan.py  test_scorecard.py  test_scoring.py  test_static_checks.py  test_stats.py  test_validate_full.py  test_validate_structural.py
tests/fixtures/bad-skill/: SKILL.md
tests/fixtures/good-skill/: SKILL.md
tests/fixtures/unsafe-skill/: SKILL.md
(+36 files in other folders)
