[project]
name = "skval"
version = "0.0.0"
description = "Skill Validator Framework — score a Claude Code skill against evals and benchmarks"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
pythonpath = ["skills/skill-validator/scripts"]
testpaths = ["tests"]
addopts = "-q"
